add arc & arc_ecto + image upload to products

--- a/niflheim/lib/niflheim_web/templates/product/index.html.eex
+++ b/niflheim/lib/niflheim_web/templates/product/index.html.eex
@@ -14,7 +14,9 @@
 <%= for product <- @products do %>
     <tr>
       <td><%= product.title %></td>
-      <td><%= product.image %></td>
+      <td>
+        <img src="<%= Niflheim.ImageUploader.url({product.image, product}) %>"/>
+      </td>
       <td><%= product.price %></td>
 
       <td>
