--- a/niflheim/lib/niflheim_web/templates/product/form.html.eex
+++ b/niflheim/lib/niflheim_web/templates/product/form.html.eex
@@ -1,4 +1,4 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -10,7 +10,7 @@
   <%= error_tag f, :title %>
 
   <%= label f, :image %>
-  <%= text_input f, :image %>
+  <%= file_input f, :image %>
   <%= error_tag f, :image %>
 
   <%= label f, :price %>
