--- a/niflheim/assets/css/app.scss
+++ b/niflheim/assets/css/app.scss
@@ -34,3 +34,15 @@
   display: block;
   margin: -1rem 0 2rem;
 }
+/* image limit */
+.table-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+.show-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
